#
# This file is part of project GEOS (http://trac.osgeo.org/geos/) 
#
SUBDIRS = \
    algorithm \
    geom \
    geomgraph \
    index \
    io \
    linearref \
    noding \
    operation \
    planargraph \
    precision \
    simplify \
    triangulate \
    util

EXTRA_DIST = version.h.vc platform.h.vc platform.h.cmake

geosdir = $(includedir)/geos

geos_HEADERS = \
    export.h \
    geomgraph.h \
    geomgraphindex.h \
    geom.h \
    geomUtil.h \
    geosAlgorithm.h \
    indexBintree.h \
    indexChain.h \
    indexQuadtree.h \
    indexStrtree.h \
    indexSweepline.h \
    inline.h \
    io.h \
    noding.h \
    nodingSnapround.h \
    opBuffer.h \
    opDistance.h \
    operation.h \
    opLinemerge.h \
    opOverlay.h \
    opPolygonize.h \
    opPredicate.h \
    opRelate.h \
    opValid.h \
    planargraph.h \
    precision.h \
    profiler.h \
    spatialIndex.h \
    timeval.h \
    unload.h \
    util.h

nodist_geos_HEADERS = \
 version.h \
 platform.h
