#
# This file is part of project GEOS (http://trac.osgeo.org/geos/)
#
SUBDIRS = \
    algorithm \
    edgegraph \
    geom \
    geomgraph \
    index \
    io \
    linearref \
    math \
    noding \
    operation \
    planargraph \
    precision \
    simplify \
    triangulate \
    shape \
    util

EXTRA_DIST =

geosdir = $(includedir)/geos

geos_HEADERS = \
    constants.h \
    export.h \
    geom.h \
    inline.h \
    namespaces.h \
    profiler.h \
    unload.h \
    util.h

nodist_geos_HEADERS = \
    version.h
