#SUBDIRS = predicate

noinst_LTLIBRARIES = libalgorithm.la

INCLUDES = -I$(top_srcdir)/source/headers 

libalgorithm_la_SOURCES = \
	CentroidArea.cpp \
	CentroidLine.cpp \
	CentroidPoint.cpp \
	CGAlgorithms.cpp \
	ConvexHull.cpp \
	HCoordinate.cpp \
	InteriorPointArea.cpp \
	InteriorPointLine.cpp \
	InteriorPointPoint.cpp \
	LineIntersector.cpp \
	MCPointInRing.cpp \
	MinimumDiameter.cpp \
	NonRobustLineIntersector.cpp \
	NotRepresentableException.cpp \
	PointLocator.cpp \
	RayCrossingCounter.cpp \
	RobustDeterminant.cpp \
	RobustLineIntersector.cpp \
	SimplePointInAreaLocator.cpp \
	SimplePointInRing.cpp \
	SIRtreePointInRing.cpp 

libalgorithm_la_LIBADD = 

